infra/monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  labels:
    release: prometheus-stack
  name: prometheus-public
  namespace: monitor
spec:
  ingressClassName: nginx
  rules:
  - host: prom.takutakahashi.dev
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prom.takutakahashi.dev
    secretName: prometheus-public-tls
